Bug 454801 - Astronomical events calendar plugin now shows an event marker for every day
Summary: Astronomical events calendar plugin now shows an event marker for every day
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: General (other bugs)
Version First Reported In: 5.24.90
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-06-03 15:09 UTC by Paul Worrall
Modified: 2022-06-03 18:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Worrall 2022-06-03 15:09:33 UTC
STEPS TO REPRODUCE
1. Configure Digital Clock=>Calendar=>Astronomical Events (enable)
2. On Astronomical Events page, ensure Lunar phases are enabled

OBSERVED RESULT
The calendar displays an event marker on every day.  
Most of the "events" are just the state of the moon on that day, i.e. mostly "Waxing or Waning" "Gibbous or Crescent"

EXPECTED RESULT
The calendar should display event markers only for the moon's phases i.e. New moon, First quarter, Full moon & Last quarter

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.25.80
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.4
Kernel Version: 5.13.0-44-generic (64-bit)
Graphics Platform: X11
Processors: 2 × AMD A6-6400K APU with Radeon(tm) HD Graphics
Memory: 7.7 GiB of RAM
Graphics Processor: AMD CEDAR
Manufacturer: NOVATECH LTD
Product Name: BB-64004H
System Version: V1.0

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2022-06-03 18:22:14 UTC
So what's going on here is that the Astronomical Events plugin adds these as events. And the Digital Clock shows a dot for every day with an event. Since every day now has an event, every day shows a dot.

We have two options:
1. Introduce the concept of the "minor event" or "informational event" that doesn't show a dot on the day, and port the Astronomical Events plugin to use that.
2. Change the Astronomical Events plugin to have fewer events; maybe it's overkill to show an event every single day showing things like "waxing gibbous" Indeed, only showing the four primary phases might make sense.

Or we could do both.
Comment 2 Nate Graham 2022-06-03 18:24:53 UTC
Ah I see what happened. the Astronomical Events plugin simply consumes data from KHolidays, which added the intermediate phases in 52eb1561be10d21f6dba4a25dafef60c85864b48. CCing Volker who added those.

So we have a third option: find a way to filter those out in the Astronomical Events plugin.
Comment 3 Bug Janitor Service 2022-06-03 18:34:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/167
Comment 4 Volker Krause 2022-06-03 18:50:59 UTC
Git commit 3f49140aae98e3f1d485e9a4e9657b6cf20f413f by Volker Krause.
Committed on 03/06/2022 at 18:34.
Pushed by ngraham into branch 'master'.

Explicitly list relevant lunar phase events

M  +2    -1    plasmacalendarplugins/astronomical/astronomicaleventsplugin.cpp

https://invent.kde.org/plasma/kdeplasma-addons/commit/3f49140aae98e3f1d485e9a4e9657b6cf20f413f
Comment 5 Nate Graham 2022-06-03 18:51:27 UTC
Git commit 966967d7588933eeb8ab29360625469b82b1bb68 by Nate Graham, on behalf of Volker Krause.
Committed on 03/06/2022 at 18:51.
Pushed by ngraham into branch 'Plasma/5.25'.

Explicitly list relevant lunar phase events


(cherry picked from commit 3f49140aae98e3f1d485e9a4e9657b6cf20f413f)

M  +2    -1    plasmacalendarplugins/astronomical/astronomicaleventsplugin.cpp

https://invent.kde.org/plasma/kdeplasma-addons/commit/966967d7588933eeb8ab29360625469b82b1bb68