Explicitly list relevant lunar phase events

BUG: 454801